
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-agentcore-poc"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aws-opentelemetry-distro >= 0.10.0",
    "bedrock-agentcore >= 1.0.3",
    "langchain >= 1.0.3",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain_aws >= 1.0.0",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "python-dotenv >= 1.2.1",
    "tiktoken==0.11.0",
    # DeepAgents and ACP dependencies
    "agent-client-protocol @ git+https://github.com/3coins/python-sdk@http-ws-transport",
    "websockets >= 16.0",
    "deepagents",
    "deepagents-acp @ git+https://github.com/langchain-ai/deepagents.git#subdirectory=libs/acp"
    # Note: acp-http-transport is in requirements.txt as local editable package
]